--- a/src/components/current/Current.css
+++ b/src/components/current/Current.css
@@ -1,11 +1,38 @@
 .weather{
     width: 300px;
+    height:200px;
     border-radius: 6px;
     box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
-    color: #fff;
-    background-color: #333;
     margin: 20px auto 0 auto;
-    padding: 0 20px 20px 20px;
+    padding: 5px;
+    color: #041E42;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Hazeday, .Cloudsday , .Mistday {
+    background-color: #B0C4DE;
+   
+}
+.Hazenight, .Cloudsnight, .Mistnight{
+    background-color: #5D8AA8;
+}
+.Clearday{
+    background-color: #00BFFF;
+}
+
+.Clearnight{
+    background-color: #002147;
+}
+
+.inside{
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(5px);
+    border-radius: inherit;
+    padding: 5px;
+    width: 95%;
+    height: 75%;
 }
 
 .top, .bottom{
@@ -30,7 +57,7 @@
 }
 
 .weatherIcon{
-    width: 100px;
+    width: 60px;
 }
 
 
@@ -43,7 +70,7 @@
 }
 
 .details{
-    width: 100%;
+    width: 50%;
     padding-left: 20px;
 
 }
