--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -1,10 +1,18 @@
 .title {
   font-size: 23px;
   font-weight: 700;
+  display: flex;
+  flex-direction: row; 
+  
+}
+
+.title p{
+  font-size: 12px;
+  margin-left: 10px;
 }
 
 .daily_item {
-  background-color: #f5f5f5;
+  background-color: lightgray;
   border-radius: 15px;
   height: 40px;
   margin: 5px;
