--- a/src/components/current/Current.css
+++ b/src/components/current/Current.css
@@ -1,6 +1,5 @@
 .weather{
-    width: 300px;
-    height:200px;
+    height:300px;
     border-radius: 6px;
     box-shadow: 10px -2px 20px 2px rgb(0 0 0 / 30%);
     margin: 20px auto 0 auto;
@@ -8,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .Hazeday, .Cloudsday , .Mistday , .Drizzleday, .Smokeday , .Dustday, .Fogday, .Sandday, .Ashday, .Squallday, .Tornadoday {
@@ -46,15 +46,29 @@
     border:1px solid rgba(255, 255, 255, 0.18);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     border-radius: inherit;
-    padding: 5px;
+    padding: 5px 15px;
     width: 95%;
     height: 75%;
 }
-
+.top_container{
+    display: flex;
+    flex-direction: space-evenly;
+    align-items: center;
+    justify-content: center;
+}
+h4{
+    margin: 0 25px;
+}
+.sunPost{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .top, .bottom{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 25px;
 }
 
 .cityName{
@@ -67,7 +81,7 @@
 
 .weatherStat{
     font-weight: 400;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 1;
     margin: 0;
 }
@@ -75,7 +89,6 @@
 .weatherIcon{
     width: 60px;
 }
-
 
 .temp{
     font-weight: 600;
@@ -86,10 +99,17 @@
 }
 
 .details{
-    width: 50%;
+    width: 35%;
     padding-left: 20px;
 
 }
+@media (max-width: 600px) {
+    .details{
+        width: 50%;
+    }
+}
+
+
 
 .parameterRow{
     display: flex;
